tests/tests/checks/snapshots/analysis/cpp/templates7.cpp/check_glob@def_InlineTemplateShouldHaveContextSym.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00017:14-48",
    "source": 1,
    "nestingRange": "17:52-17:53",
    "syntax": "def,function",
    "type": "void (T)",
    "pretty": "function Theme::InlineTemplateShouldHaveContextSym",
    "sym": "_ZN5Theme34InlineTemplateShouldHaveContextSymET_"
  },
  {
    "loc": "00017:14-48",
    "target": 1,
    "kind": "def",
    "pretty": "Theme::InlineTemplateShouldHaveContextSym",
    "sym": "_ZN5Theme34InlineTemplateShouldHaveContextSymET_",
    "context": "Theme",
    "contextsym": "T_Theme",
    "peekRange": "17-17"
  }
]
