tests/tests/checks/snapshots/analysis/cpp/templates7.cpp/check_glob@def_OutOfLineShouldntHaveContextSym.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00026:12-43",
    "source": 1,
    "nestingRange": "26:49-26:50",
    "syntax": "def,function",
    "type": "void (int)",
    "pretty": "function Theme::OutOfLineShouldntHaveContextSym",
    "sym": "_ZN5Theme31OutOfLineShouldntHaveContextSymEi"
  },
  {
    "loc": "00026:12-43",
    "target": 1,
    "kind": "def",
    "pretty": "Theme::OutOfLineShouldntHaveContextSym",
    "sym": "_ZN5Theme31OutOfLineShouldntHaveContextSymEi",
    "peekRange": "26-26"
  }
]
