tests/tests/checks/snapshots/analysis/cpp/templates7.cpp/check_glob@def_OutOfLineTemplateShouldntHaveContextSym.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00023:12-51",
    "source": 1,
    "nestingRange": "23:55-23:56",
    "syntax": "def,function",
    "type": "void (T)",
    "pretty": "function Theme::OutOfLineTemplateShouldntHaveContextSym",
    "sym": "_ZN5Theme39OutOfLineTemplateShouldntHaveContextSymET_"
  },
  {
    "loc": "00023:12-51",
    "target": 1,
    "kind": "def",
    "pretty": "Theme::OutOfLineTemplateShouldntHaveContextSym",
    "sym": "_ZN5Theme39OutOfLineTemplateShouldntHaveContextSymET_",
    "peekRange": "23-23"
  }
]
