tests/tests/checks/snapshots/analysis/cpp/templates7.cpp/main@def_InlineShouldHaveContextSym.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/templates7.cpp/def_InlineShouldHaveContextSym
---
[
  {
    "loc": "00020:14-40",
    "target": 1,
    "kind": "def",
    "pretty": "Theme::InlineShouldHaveContextSym",
    "sym": "_ZN5Theme26InlineShouldHaveContextSymEi",
    "context": "Theme",
    "contextsym": "T_Theme",
    "peekRange": "20-20"
  },
  {
    "loc": "00020:14-40",
    "source": 1,
    "syntax": "def,function",
    "pretty": "function Theme::InlineShouldHaveContextSym",
    "sym": "_ZN5Theme26InlineShouldHaveContextSymEi",
    "nestingRange": "20:46-20:47",
    "type": "void (int)"
  }
]
