tests/tests/checks/snapshots/analysis/cpp/templates7.cpp/main@def_InlineTemplateShouldHaveContextSym.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00018:14-48",
    "source": 1,
    "nestingRange": "18:52-18:53",
    "syntax": "def,function",
    "type": "void (T)",
    "pretty": "function Theme::InlineTemplateShouldHaveContextSym",
    "sym": "_ZN5Theme34InlineTemplateShouldHaveContextSymET_"
  },
  {
    "loc": "00018:14-48",
    "target": 1,
    "kind": "def",
    "pretty": "Theme::InlineTemplateShouldHaveContextSym",
    "sym": "_ZN5Theme34InlineTemplateShouldHaveContextSymET_",
    "context": "Theme",
    "contextsym": "T_Theme",
    "peekRange": "18-18"
  }
]
