tests/tests/checks/snapshots/analysis/cpp/templates7.cpp/main@def_OutOfLineShouldntHaveContextSym.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/templates7.cpp/def_OutOfLineShouldntHaveContextSym
---
[
  {
    "loc": "00026:12-43",
    "target": 1,
    "kind": "def",
    "pretty": "Theme::OutOfLineShouldntHaveContextSym",
    "sym": "_ZN5Theme31OutOfLineShouldntHaveContextSymEi",
    "peekRange": "26-26"
  },
  {
    "loc": "00026:12-43",
    "source": 1,
    "syntax": "def,function",
    "pretty": "function Theme::OutOfLineShouldntHaveContextSym",
    "sym": "_ZN5Theme31OutOfLineShouldntHaveContextSymEi",
    "nestingRange": "26:49-26:50",
    "type": "void (int)"
  }
]
