tests/tests/checks/snapshots/analysis/cpp/templates7.cpp/main@def_OutOfLineTemplateShouldntHaveContextSym.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
snapshot_kind: text
---
[
  {
    "loc": "00024:12-51",
    "source": 1,
    "nestingRange": "24:55-24:56",
    "syntax": "def,function",
    "type": "void (T)",
    "pretty": "function Theme::OutOfLineTemplateShouldntHaveContextSym",
    "sym": "_ZN5Theme39OutOfLineTemplateShouldntHaveContextSymET_"
  },
  {
    "loc": "00024:12-51",
    "target": 1,
    "kind": "def",
    "pretty": "Theme::OutOfLineTemplateShouldntHaveContextSym",
    "sym": "_ZN5Theme39OutOfLineTemplateShouldntHaveContextSymET_",
    "peekRange": "24-24"
  }
]
